<resources>
    <string name="app_name">GoodsCenter</string>
    <string name="goods_center">Goods Center</string>
    <string name="share">Share</string>
    <string name="cart">Cart</string>
    <string name="search_item">search item</string>
    <string name="search">Search</string>
    <string name="no_history">no history</string>
    <string name="recent_history">recent history</string>
    <string name="clear_history">clear history</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="select_all">Select all</string>
    <string name="pay">pay</string>
    <string name="delete">delete</string>
    <string name="category">category</string>
    <string name="trending">trending</string>
    <string name="selected">Selected</string>
    <string name="numbers">Numbers</string>
    <string name="add_to_cart">Add to cart</string>
</resources>
